[gd_scene load_steps=2 format=3 uid="uid://0qq670syte67"]

[ext_resource type="Script" path="res://scripts/project_item_cell.gd" id="1_x8vbp"]

[node name="ProjectItem" type="HBoxContainer"]
script = ExtResource("1_x8vbp")

[node name="TitleLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "item name"

[node name="AvailableLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Available:"

[node name="RequiredLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Needed:"

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Ship"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
